[tool.poetry]
name = "beavis"
version = "0.1.0"
description = ""
authors = ["MrPowers <matthewkevinpowers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dask = ">2021.01.1"
pandas = ">=1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
pytest-describe = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
